[project]
name = "mcp-server-neo4j"
version = "0.1.0"
description = "Neo4j graph database integration for Model Context Protocol, enabling LLMs to query, update and traverse graph data with secure access controls and transactional consistency"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
 "mcp @ git+https://github.com/modelcontextprotocol/python-sdk.git",
 "neo4j>=5.26.0",
 "python-dotenv>=1.0.1",
]

[[project.authors]]
name = "jtanningbed"
email = "jtan92@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-neo4j = "mcp_server_neo4j:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers>=4.8.2"
]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]
